Fix z-index of window controls over single window chat.

--- a/css/chat.css
+++ b/css/chat.css
@@ -141,6 +141,10 @@ body:not(.WindowFocus) .chatTabOpenFriendsList .SVGIcon_Group {
 }
 
 /* TITLEBAR */
+.singlewindow .titleBarContainer.ChatTabs {
+  z-index: 1 !important;
+}
+
 .titleBarContainer.ChatTabs {
   border: unset !important;
   /* background-color: transparent !important; */
